<resources>
    <string name="app_name">Udacity Portfolio</string>
    <string name="title">My NanoDegree Apps</string>
    <string name="popular_movies_button">Popular Movies</string>
    <string name="stock_hawk_button">Stock Hawk</string>
    <string name="build_it_bigger_button">Build it Bigger</string>
    <string name="make_your_app_material_button">Make Your App Material</string>
    <string name="go_ubiquitous_button">Go Ubiquitous</string>
    <string name="capstone_button">Capstone</string>
</resources>
