<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.udacityportfolio.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center|top"/>

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/popular_movies_button"
        android:id="@+id/popular_button"
        android:onClick="buttonOnClick"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:requiresFadingEdge="horizontal"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/stock_hawk_button"
        android:onClick="buttonOnClick"
        android:id="@+id/stock_hawk_button"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_button"
        android:id="@+id/build_it_bigger_button"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:onClick="buttonOnClick"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/make_your_app_material_button"
        android:id="@+id/make_your_app_material_button"
        android:onClick="buttonOnClick"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous_button"
        android:id="@+id/go_ubiquitous_button"
        android:onClick="buttonOnClick"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_button"
        android:id="@+id/capstone_button"
        android:onClick="buttonOnClick"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
</LinearLayout>
